--- a/src/style.css
+++ b/src/style.css
@@ -97,16 +97,30 @@ section nav {
 
 section nav a {
     text-decoration: none;
-    background-color: transparent;
+    background-color: var(--neutral-0);
     padding: 0.6em 1.2em;
     border-radius: 1.5em;
     color: var(--neutral-700);
     font: 500 1rem myFont;
     border: 1px solid var(--neutral-300);
     margin-right: 0.2em;
+    cursor: pointer;
 }
 
-nav .indicator {
+nav a.focus {
+    color: white;
+    border: none;
+    background-color: transparent;
+    &:hover {
+        color: white;
+    }
+}
+
+nav a:hover ~ #indicator {
+    background-color: var(--red-400);
+}
+
+nav #indicator {
     transition:
         transform 0.3s ease-in-out,
         width 0.3s ease-in-out;
@@ -117,13 +131,11 @@ nav .indicator {
     width: 0;
     background-color: var(--red-700);
     height: 0;
-    z-index: -10;
+    z-index: -3;
 }
 
 section nav a:hover {
-    box-shadow: none;
-    color: var(--neutral-800);
-    background-color: transparent;
+    background-color: var(--neutral-200);
 }
 
 main {
