Fixed vite issue of habdling static assets

--- a/src/style.css
+++ b/src/style.css
@@ -21,7 +21,7 @@
 
 @font-face {
     font-family: myFont;
-    src: url(../assets/fonts/NotoSans-VariableFont_wdthwght.ttf);
+    src: url(/fonts/NotoSans-VariableFont_wdthwght.ttf);
 }
 
 body {
